[package]
name = "lit-attestation"
description = "Lit Attestation"
authors = ["David Radunz <david.radunz@litprotocol.com>"]
version = "0.1.0"
edition.workspace = true

[features]
default = []
generate-via-service = ["generate", "service"]
generate-via-system = ["generate"]
generate = []
service = ["arc-swap", "lit-api-core", "hyper", "hyperlocal"]
kdf = ["blake3"]

[dependencies]
aleo-std-cpu = { version = "0.1.3" }
arc-swap = { workspace = true, optional = true }
async-trait.workspace = true
blake3 = { version = "1.6", optional = true }
bytes.workspace = true
byteorder = { version = "1.5" }
derive_more.workspace = true
ethers.workspace = true
hex.workspace = true
hyper = { workspace = true, optional = true }
hyperlocal = { workspace = true, optional = true }
libsecp256k1 = { git = "https://github.com/LIT-Protocol/libsecp256k1", branch = "master", version = "0.7.1" }
lit-node-core = { path = "../../lit-node/lit-node-core" }
moka = { version = "0.11", features = ["future"] }
once_cell.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_bytes_base64 = { version = "0.1.1" }
sev-snp-utilities = { version = "2.600.0" }
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true

[dependencies.lit-core]
path = "../lit-core"

[dependencies.lit-core-derive]
path = "../lit-core-derive"

[dependencies.lit-blockchain]
path = "../lit-blockchain"

[dependencies.lit-api-core]
path = "../lit-api-core"
features = ["client-hyper"]
optional = true
