[package]
name = "lit-cli-core"
description = "Lit CLI - Core"
authors = ["David Radunz <david.radunz@litprotocol.com>"]
version = "0.1.0"
edition.workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
term-table = { version = "1.4.0" }
uuid = { version = "1.15", features = ["v4"] }
ctrlc = { version = "3" }
bytesize = { version = "2" }
termion = { version = "4" }

[dependencies.lit-core]
path = "../lit-core"