[package]
edition.workspace = true
license-file = "./LICENSE"
name = "lit-fast-ecdsa"
readme = "README.md"
version = "0.2.0"

[features]
default = ["presign"]
presign = ["lit-poly"]

[dependencies]
digest = "0.10"
ecdsa = { version = "0.16", features = ["arithmetic", "digest", "hazmat"] }
elliptic-curve-tools.workspace = true
hex.workspace = true
lit-poly = { git = "https://github.com/LIT-Protocol/lit-poly.git", optional = true }
hd-keys-curves-wasm = { workspace = true, features = ["k256", "p256", "p384"] }
lit-rust-crypto = { workspace = true, features = ["k256", "p256", "p384", "serde", "vsss-rs"] }
rand.workspace = true
serde.workspace = true
sha2.workspace = true
subtle = "2.6"
thiserror.workspace = true
zeroize.workspace = true

[dev-dependencies]
criterion = "0.7"
rand_chacha.workspace = true
rstest = "0.26"
serde_json.workspace = true

[[bench]]
name = "k256"
harness = false

[[bench]]
name = "p256"
harness = false
