[package]
name = "lit-logging"
description = "Lit Logging"
authors = ["David Radunz <david.radunz@litprotocol.com>"]
version = "0.1.0"
edition.workspace = true
exclude = ["resources/test/"]

[features]
default = ["lit-core/logging-core"]
service = ["crossbeam-channel", "chrono", "async-trait", "tokio", "hyper", "hyperlocal"]

[dependencies]
async-trait = { workspace = true, optional = true }
chrono = { version = "0.4", optional = true }
crossbeam-channel = { version = "0.5", optional = true }
derive_more.workspace = true
env_logger = { git = "https://github.com/LIT-Protocol/env_logger.git", features = ["fmt-internals"] }
hyper = { workspace = true, optional = true }
hyperlocal = { workspace = true, optional = true }
log = { version = "0.4", features = ["kv_unstable", "kv_unstable_serde"] }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, optional = true }

[dependencies.lit-core]
path = "../lit-core"

[dependencies.lit-core-derive]
path = "../lit-core-derive"

[package.metadata.cargo-udeps.ignore]
normal = ["crossbeam-channel", "chrono"]
