[package]
name = "lit-observability"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
testing = ["ansi", "tracing-log"]
ansi = []
tracing-log = []
proxy-collector = []
channels = ["dep:flume"]

[dependencies]
derive_more.workspace = true
flume = { version = "0.11", optional = true }
hyper-util.workspace = true
nu-ansi-term = { version = "0.50.1" }
opentelemetry.workspace = true
opentelemetry-appender-tracing = { version = "0.5.0", default-features = false }
opentelemetry-otlp = { workspace = true, features = ["logs"] }
opentelemetry-semantic-conventions.workspace = true
opentelemetry_sdk = { workspace = true, features = ["logs"] }
tokio.workspace = true
tonic = "0.12"
tonic-middleware = "0.2"
tower = "0.5"
tracing = { workspace = true, features = ["std"] }
tracing-appender = "0.2"
tracing-log = { version = "0.2" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry", "std"] }
tracing-opentelemetry.workspace = true

[dependencies.lit-core]
path = "../lit-core"

[dependencies.lit-core-derive]
path = "../lit-core-derive"

[dependencies.lit-logging]
path = "../lit-logging"
features = ["service"]