[package]
name = "lit-os-metrics-internal"
version = "0.1.0"
edition.workspace = true

[dependencies]
derive_more.workspace = true
osquery-rs = "0.1"
serde.workspace = true
serde_json.workspace = true

[dependencies.lit-core]
path = "../../lit-core/lit-core"

[dependencies.lit-core-derive]
path = "../../lit-core/lit-core-derive"
