[package]
name = "lit-vrf"
version = "0.2.0"
edition.workspace = true

[features]

[dependencies]
elliptic-curve-tools.workspace = true
bulletproofs = { workspace = true, features = ["ed25519", "ristretto25519", "jubjub", "decaf377"] }
lit-rust-crypto = { workspace = true, features = ["default"] }
serde.workspace = true
thiserror.workspace = true

# optional dependencies
rfc6979 = { version = "0.4" }
sha2.workspace = true
sha3.workspace = true
blake2 = "0.10"

[dev-dependencies]
rand.workspace = true
rand_chacha.workspace = true
serde_bare = "0.5"
serde_json.workspace = true
