[package]
name = "lit-node-core"
version = "2.0.1"
edition.workspace = true

[features]
default = []

[dependencies]
blsful.workspace = true
curve25519-dalek.workspace = true
decaf377.workspace = true
ed25519-dalek.workspace = true
ed448-goldilocks.workspace = true
ethabi.workspace = true
ethers.workspace = true
hd-keys-curves-wasm = { git = "https://github.com/LIT-Protocol/hd-keys-curves-wasm", default-features = false, features = ["bls", "k256", "p256", "p384", "curve25519", "ed448", "jubjub", "decaf377"] }
hex.workspace = true
jubjub.workspace = true
k256 = { version = "0.13", features = ["ecdsa", "serde"] }
p256 = { version = "0.13", features = ["ecdsa", "serde"] }
p384 = { version = "0.13.1", features = ["ecdsa", "serde"] }
serde.workspace = true
serde_json.workspace = true
thiserror = "2.0"
vsss-rs.workspace = true

[dev-dependencies]
